--- a/site.css
+++ b/site.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root{
     --cor1: #245CA6;
     --cor2: #243040;
@@ -5,6 +8,8 @@
     --cor4: #F2C094;
     --cor5: #BF5239;
 
+    --font1: 'Domine', 'cursive';
+    --font2: 'Roboto', 'cursive';
 }
 
 
@@ -13,22 +18,66 @@
     margin: 0px;
 }
 body{
-background-color: var(--cor4);
-height: 100vh;
-
+    background-color: var(--cor5);
+    height: 100vh;
+}
+h1{
+    font-family: var(--font1);
+    padding-bottom: 13px;
+}
+h2{
+    padding-bottom: 10px;
 }
 header{
     background-color: var(--cor1);
-    display:flex ;
-    flex-direction: ;
+    display:flex;
+    justify-content: left;
+    align-items: center;
+    color: white;
+    box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.952);
+    border-radius: 5px;
+}
+header p{
+    font-family: var(--font2);
+    padding-left: 9px;
 }
 section{
-background-color: var(--cor5);
-height: 95vh;
+    background-color: var(--cor4);
+    font-family: var(--font2);
+    font-size: 90%;
+    width: 80%;
+    margin: auto;
+    height: 65.7vh;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.952);
 }
-p{
+div#conteudo{
+    padding: 10px;
+}
+div#redes{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    font-size: 150%;
+    justify-content: center;
     
 }
+img{
+    padding: 10px 30px 10px 50px;
+}
 footer{
-background-color: var(--cor2);
+    background-color: var(--cor2);
+    color: white;
+    text-align: center;
+}
+header img#icone{
+    padding: 0px;
+    width: 15px;
+    padding: 0px 4px;
+}
+img#icone{
+    padding: 0px;
+    width: 35px;
+    height: 35px;
+    margin: 2px 4px;
+    border-radius: 50%;
 }
