--- a/site.css
+++ b/site.css
@@ -26,7 +26,7 @@ h1{
     padding-bottom: 13px;
 }
 h2{
-    padding-bottom: 10px;
+    padding: 5px 0px;
 }
 header{
     background-color: var(--cor1);
@@ -36,6 +36,7 @@ header{
     color: white;
     box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.952);
     border-radius: 5px;
+    padding-left: 6.2%;
 }
 header p{
     font-family: var(--font2);
@@ -63,8 +64,12 @@ section{
     font-size: 90%;
     width: 80%;
     margin: auto;
-    height: 65.7vh;
+    min-height: 65.7vh;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.952);
+}
+p{
+    line-height: 1.3;
+    text-indent: 15px;
 }
 div#conteudo{
     padding: 10px;
@@ -99,4 +104,26 @@ footer{
     background-color: var(--cor2);
     color: white;
     text-align: center;
+}
+#reduzido{
+    display: none;
+}
+#medio{
+    display: none;
+}
+@media (max-width: 780px){
+    #completo {
+        display: none;
+    }
+    #medio{
+        display: block;
+    }
+}
+@media (max-width: 609px){
+    #medio {
+        display: none;
+    }
+    #reduzido{
+        display: block;
+    }
 }
