--- a/site.css
+++ b/site.css
@@ -11,8 +11,6 @@
     --font1: 'Domine', 'cursive';
     --font2: 'Roboto', 'cursive';
 }
-
-
 *{
     padding: 0px;
     margin: 0px;
@@ -67,7 +65,7 @@ section{
     font-size: 90%;
     width: 80%;
     margin: auto;
-    min-height: 65.7vh;
+    min-height: 50vh;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.952);
 }
 p{
@@ -90,8 +88,8 @@ div#redes > p{
     align-items: center;
 }
 a{
-    text-decoration: none;
-    color: black;
+    text-decoration: underline;
+    color: rgba(0, 0, 177, 0.836);
     margin: 0px 7px;
     
 }
