--- a/portifolio.css
+++ b/portifolio.css
@@ -21,9 +21,10 @@ body{
 }
 h1{
     font-family: var(--font1);
+    text-align: center;
 }
 h2{
-
+    font-family: var(--font2);
 }
 header{
     background-color: var(--cor1);
@@ -35,9 +36,6 @@ header{
     box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.952);
     border-radius: 5px;
 }
-header h1{
-
-}
 header p{
     font-family: var(--font2);
 }
@@ -46,8 +44,9 @@ section{
     font-family: var(--font2);
     font-size: 90%;
     width: 80%;
+    max-width: 800px;
     margin: auto;
-    min-height: 83.8vh;
+    min-height: 82.7vh;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.952);
 }
 div#conteudo{
@@ -55,12 +54,18 @@ div#conteudo{
 }
 p{
     line-height: 1.3;
-    text-indent: 15px;
+    text-indent: 5px;
+    padding: 3.8px 0px;
 }
 a{
     text-decoration: underline;
     color: rgba(0, 0, 177, 0.836);
-    margin: 0px 7px;
+    padding: 0px 20px;
+}
+a#curso{
+    padding: 0px;
+    text-decoration: underline;
+    color: rgba(0, 0, 177, 0.836);
 }
 a:hover{
     text-decoration: underline;
